package.json: omit "onCommand" & "onView" activation events
They can be generated automatically by the extension host, so they are not needed.

--- a/package.json
+++ b/package.json
@@ -23,11 +23,7 @@
         "Other"
     ],
     "activationEvents": [
-        "onResolveRemoteAuthority:remote-oss",
-        "onCommand:remote-oss.openEmptyWindowInCurrentWindow",
-        "onCommand:remote-oss.openFolderInCurrentWindow",
-        "onCommand:remote-oss.showLog",
-        "onView:remoteHosts"
+        "onResolveRemoteAuthority:remote-oss"
     ],
     "main": "./out/extension.js",
     "capabilities": {
